--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "tsx server/index.ts",
-    "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=cjs --outdir=dist",
+    "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
