--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend (Web Service)
   - type: web
     name: tlusteelcutoptimizer-backend
     env: node
@@ -16,3 +17,17 @@ services:
       - key: NODE_ENV
         value: production
     preBuildCommand: apt-get update && apt-get install -y python3 python3-pip && pip3 install pulp
+
+  # Frontend (Static Site)
+  - type: static
+    name: tlusteelcutoptimizer-frontend
+    env: static
+    region: singapore
+    plan: free
+    branch: main
+    rootDir: client
+    buildCommand: npm install && npm run build:client
+    publishDir: dist/public
+    envVars:
+      - key: NODE_VERSION
+        value: 18
