--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "tsx server/index.ts",
     "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:client": "vite build",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
